examples/working/errors/slk-bigint.slk

data node {
  int val;
  node next;
}.

pred bigint<v> == self = null & v = 0 or
     self::node<p, q> * q::bigint<v1> & 0 <= p <= 9 & v = 10*v1 + p 
inv v >= 0.

checkentail q_540::bigint<v1_541> * q_560::bigint<v1_561> * 
x::node<p_539,q_540> * y::node<p_559,q_560> &0<=p_559 & 
p_559<=9 & v2=p_559+(10*v1_561) & 0<=p_539 & p_539<=9 & v1=p_539+(10*
v1_541) & x!=null & !(v_bool_18_490') & x!=null & !(v_bool_18_490') & 
y!=null & !(v_bool_22_489') & y!=null & !(v_bool_22_489') & p_539!=p_559 & 
!(v_bool_26_488') & p_539!=p_559 & !(v_bool_26_488') & 
!(v_boolean_27_487') & res2=v_boolean_27_487'
 |-  (exists v1_15,v2_16: x::bigint<v1_15> * 
y::bigint<v2_16> &(res2 & v1=v2 | !(res2) & v1!=v2) & 
v1=v1_15 & v2=v2_16). 
/*
Entail (1) : Fail.(may) cause: (q_540=null & v1_65=0 | q_540!=null & 0<=v1_65) & (q_560=null & v1_70=0 | 
q_560!=null & 0<=v1_70) & !(res2) & p_539!=p_559 & p_539<=9 & 0<=p_539 & 
p_559<=9 & 0<=p_559 & v1=(10*v1_65)+p_539 & v2=(10*v1_70)+p_559 |-  7::res2 & v1=v2 | !(res2) & v1!=v2. LOCS:[7;1;15;12;18;17;13;0;19] (may-bug)
*/

checkentail q_540::bigint<v1_541> * q_560::bigint<v1_561> * 
x::node<p_539,q_540> * y::node<p_559,q_560> &0<=p_559 & 
p_559<=9 & v2=p_559+(10*v1_561) & 0<=p_539 & p_539<=9 & v1=p_539+(10*
v1_541) & x!=null & !(v_bool_18_490') & x!=null & !(v_bool_18_490') & 
y!=null & !(v_bool_22_489') & y!=null & !(v_bool_22_489') & p_539!=p_559 & 
!(v_bool_26_488') & p_539!=p_559 & !(v_bool_26_488') & 
!(v_boolean_27_487') & res2=v_boolean_27_487'
 |-  x::bigint<v1_15> * 
y::bigint<v2_16> &(res2 & v1=v2 | !(res2) & v1!=v2) & 
v1=v1_15 & v2=v2_16. 

/*
ntail (2) : Fail.(may) cause: !(res2) & p_539!=p_559 & p_559<=9 & 0<=p_539 & 0<=v1_113 & p_539<=9 & 
0<=v1_561 & v2=(10*v1_561)+p_559 & v1=(10*v1_113)+p_539 & 0<=p_559 |-  res2 & v1=v2 | !(res2) & v1!=v2. LOCS:[33;31;9;29;8;0;35] (may-bug)

*/
